--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,9 @@
 <div class="GSAP">
 
 </div>
+<div class="GSAP">
+
+</div>
 
 <section class="section-intro back-img" style="background-image: url('imgs/sample-img-1.jpg')">
     <div class="container">
